--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,8 +73,11 @@
 }
 .scrollInput {
     display: flex;
-    margin: auto;
-    margin-top: 14%;
+    position: absolute;
+    bottom: 20px;
+    right: 46.5%;
+    /* margin: auto; */
+     /*margin-top: 14%; */
     width: 115px;
     height: 25px;
     border-radius: 25px;   
@@ -171,9 +174,14 @@
     transition: .5s ease-in;
 }
 .myNextBigContainer {
-    height:740px;
+    min-height: 740px;
     width: 100%;
     background-color: rgb(84, 209, 84);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding:20px;
 }
 .mysecondh2section{
     color: darkgreen !important;
@@ -213,10 +221,8 @@
 .myImageSection{
     width: 60%;
     display: flex;
-    margin: auto;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 1.5%;
 }
 .myImageSection img {
     margin-top: 4%;
@@ -225,8 +231,7 @@
     width: 180px;
     height: 35px;
     display: flex;
-    margin:auto;
-    padding:5px;
+    padding:6px 10px;
     background-color: green;
     border-radius: 25px;
     margin-top:55px;
@@ -268,10 +273,15 @@
     font-size: 30px;
 }
 .fifthSection {
-    height: 490px;
+    min-height: 490px;
     width: 100%;
-    background-color:rgb(242, 241, 241);
+    background-color: rgb(242, 241, 241);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 } 
+
 .brauzerImg {
     display:flex;
     margin:auto;
@@ -279,7 +289,7 @@
 }
 .NotWhiteButton {
     background-color: rgb(221, 220, 220) !important;
-    width:155px !important;
+    width:165px !important;
     /* border: .5px solid grey; */
 }
 .NotWhiteButton a {
@@ -291,33 +301,39 @@
 }
 .sixthSection {
     width: 100%;
-    height: 570px;
+    min-height: 570px;
     background-color: rgb(83, 209, 83);
     background-image:  linear-gradient( rgb(83, 209, 83) 80% ,  rgb(62, 186, 62) 20% );
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 .circleImg {
-    width: 15%;
+    width: 150px;
     height:295px;
-    /* margin: auto; */
-    background-color:rgb(83, 209, 83);
+    background-color:transparent;
     display: flex;
     flex-direction: column; 
 } 
 .RoundImg{
-    display: flex;
     width: 140px;
     height: 140px;
     border-radius: 50%;
-    flex-direction: column;
     margin: auto;
 }
 .myCircleImgDiv{
-    width: 70%;
+    width: 70%; 
     display: flex;
-    justify-content:space-around;
-    margin: auto;
+    align-items: center;
+    justify-content: center;
 }
- hr {
+.parts{
+    display: flex;
+    justify-content:space-around;    
+}
+
+hr {
     transform:rotate(90deg);
     width:75px;
     margin-top: 15%;
@@ -465,13 +481,14 @@
 
 
 header {
-   height: 655px;  /**/
+   height: 100vh;  /**/
    width: 100%;
    background-image: url(img/bg2.jpg);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    -webkit-filter: contrast(120%);
    filter: contrast(120%);
+   position: relative;
 }
 nav {
     max-width:90%;
@@ -522,6 +539,22 @@ header section h1 {
     }
 } 
 
+@media screen and (max-width: 780px){
+    .myIconContainer{
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .secondSection {
+        width: 50%;
+    }
+    .myCircleImgDiv{
+        flex-direction: column;
+    }
+   
+
+}
+
 @media screen and (max-width: 1200px){
     .seventhSection{
         flex-direction: column;
@@ -540,5 +573,7 @@ header section h1 {
 
 
 }
+
+
 
 
